--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,7 @@
                         <label for="floatingPassword">Password</label>
                     </div>
                     <button type="submit" class="btn btn-primary btn-sm position-relative top-0 start-50 translate-middle-x">Login</button>
+                    <button onclick="" class="btn btn-primary btn-sm position-relative top-0 start-50 translate-middle-x">Register</button>
                 </form>
             </div>
         </main>
