--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,9 +30,9 @@
                         <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
                         <label for="floatingPassword">Password</label>
                     </div>
-                    <button type="submit" class="btn btn-primary btn-sm position-relative top-0 start-50 translate-middle-x">Login</button>
-                    <button onclick="" class="btn btn-primary btn-sm position-relative top-0 start-50 translate-middle-x">Register</button>
                 </form>
+                <button onclick="location.href='/login'" class="btn btn-primary btn-sm position-relative top-0 start-50 translate-middle-x">Login</button>
+                <button onclick="location.href='/register'" class="btn btn-primary btn-sm position-relative top-0 start-50 translate-middle-x">Register</button>
             </div>
         </main>
     </div>
