--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -4,5 +4,98 @@
 
 :root {
     margin: 50px;
-    background-color: #00517cff;
+    background-color: rgb(40, 152, 212);
 }
+
+h1 { 
+   
+    color:rgb(40, 152, 212);
+    margin-bottom: .5em;
+}
+
+.container {
+    height: 100px;
+    position:relative;
+    border: 2px solid rgb(40, 152, 212);
+  }
+  
+  .center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+
+  .button {
+    background-color: rgb(40, 152, 212); /* Green */
+    border: none;
+    color: rgb(40, 152, 212);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
+
+  .navbar {
+  background-color: rgb(40, 152, 212);
+  overflow: hidden;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+}
+
+/* Style the links inside the navigation bar */
+.navbar a {
+  float: left;
+  display: block;
+  color: #160f0f;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration:solid;
+  font-size: 17px;
+  font-weight: bold;
+}
+
+/* Change the color of links on hover */
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a green background color to the active link */
+.navbar a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+/* Hide the link that should open and close the navbar on small screens */
+.navbar .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+    .navbar a:not(:first-child) {display: none;}
+    .navbar a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  /* The "responsive" class is added to the navbar with JavaScript when the user clicks on the icon. This class makes the navbar look good on small screens (display the links vertically instead of horizontally) */
+  @media screen and (max-width: 600px) {
+    .navbar.responsive a.icon {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+    }
+    .navbar.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
+
+  
