--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,16 +12,63 @@
 
 <body>
     <div class="container">
+        <div class="center">
         <header>
             <h1 class="text-center">JavAttack</h1>
         </header>
     </div>
+    </div>
 
     <div class="container">
-        <main>
-            <h2 class="text-center">Play</h2>
-        </main>
+        <div class="center">
+        <header>
+            <button class="text-center">Play</button>
+        </header>
     </div>
+    </div>
+    <div class="container">
+        <div class="center">
+        <header>
+            <button class="text-center">Tutorial</button>
+        </header>
+    </div>
+    </div>
+    <div class="container">
+        <div class="center">
+
+        <header>
+            <button class="text-center">Profile</button>
+        </header>
+    </div>
+    </div>
+    <div class="container">
+        <div class="center">
+        <header>
+            <button class="text-center">In-Game Shop</button>
+        </header>
+    </div>
+    </div>
+
+    <div class="container">
+        <div class="center">
+        <header>
+            <button class="text-center">Sign Out</button>
+        </header>
+    </div>
+    </div>
+
+    <div class="navbar" id="myNavbar">
+        <a href="#home">Home</a>
+        <a href="#account">Account</a>
+        <a href="#leaderboard">Leaderboard</a>
+        <a href="#learning">Learning</a>
+        <a href="#forum">Forum</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+      </div>
+
+
+
+
 </body>
 
 </html>
