--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,6 +15,7 @@
         <div class="center">
         <header>
             <h1 class="text-center">JavAttack</h1>
+            <%- include ('partials/nav.ejs') -%>
         </header>
     </div>
     </div>
@@ -22,14 +23,14 @@
     <div class="container">
         <div class="center">
         <header>
-            <button class="text-center">Play</button>
+            <button class="text-center" onclick="location.href='/play'">Play</button>
         </header>
     </div>
     </div>
     <div class="container">
         <div class="center">
         <header>
-            <button class="text-center">Tutorial</button>
+            <button class="text-center" onclick="location.href='/home/tutorial'">Tutorial</button>
         </header>
     </div>
     </div>
@@ -37,7 +38,7 @@
         <div class="center">
 
         <header>
-            <button class="text-center">Profile</button>
+            <button class="text-center" onclick="location.href='/profile'">Profile</button>
         </header>
     </div>
     </div>
@@ -56,19 +57,6 @@
         </header>
     </div>
     </div>
-
-    <div class="navbar" id="myNavbar">
-        <a href="#home">Home</a>
-        <a href="#account">Account</a>
-        <a href="#leaderboard">Leaderboard</a>
-        <a href="#learning">Learning</a>
-        <a href="#forum">Forum</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-      </div>
-
-
-
-
 </body>
 
 </html>
