--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
             <div class="w-75 p-3 position-relative top-0 start-50 translate-middle-x" id="login-div">
                 <form action="/login">
                     <div class="form-floating mb-3">
-                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" value="">
                         <label for="floatingInput">Email address</label>
                     </div>
                     <div class="form-floating">
