Fixed the formatting I messed up -ryan

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,43 +19,44 @@
         </header>
     </div>
     </div>
+    <div id="centerFix">
+        <div class="container">
+            <div class="center">
+            <header>
+                <button class="text-center" onclick="location.href='/play'">Play</button>
+            </header>
+        </div>
+        </div>
+        <div class="container">
+            <div class="center">
+            <header>
+                <button class="text-center" onclick="location.href='/home/tutorial'">Tutorial</button>
+            </header>
+        </div>
+        </div>
+        <div class="container">
+            <div class="center">
 
-    <div class="container">
-        <div class="center">
-        <header>
-            <button class="text-center" onclick="location.href='/play'">Play</button>
-        </header>
-    </div>
-    </div>
-    <div class="container">
-        <div class="center">
-        <header>
-            <button class="text-center" onclick="location.href='/home/tutorial'">Tutorial</button>
-        </header>
-    </div>
-    </div>
-    <div class="container">
-        <div class="center">
+            <header>
+                <button class="text-center" onclick="location.href='/profile'">Profile</button>
+            </header>
+        </div>
+        </div>
+        <div class="container">
+            <div class="center">
+            <header>
+                <button class="text-center">In-Game Shop</button>
+            </header>
+        </div>
+        </div>
 
-        <header>
-            <button class="text-center" onclick="location.href='/profile'">Profile</button>
-        </header>
-    </div>
-    </div>
-    <div class="container">
-        <div class="center">
-        <header>
-            <button class="text-center">In-Game Shop</button>
-        </header>
-    </div>
-    </div>
-
-    <div class="container">
-        <div class="center">
-        <header>
-            <button class="text-center">Sign Out</button>
-        </header>
-    </div>
+        <div class="container">
+            <div class="center">
+                <header>
+                    <button class="text-center">Sign Out</button>
+                </header>
+            </div>
+        </div>
     </div>
 </body>
 
