reformatted the home page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,22 +19,23 @@
         </header>
     </div>
     </div>
-    <div id="centerFix">
-        <div class="container">
+    <div class="centerPage">
+    <div id="centerFix" class="text-center">
+        <div class="container-buttons">
             <div class="center">
             <header>
                 <button class="text-center" onclick="location.href='/play'">Play</button>
             </header>
         </div>
         </div>
-        <div class="container">
+        <div class="container-buttons">
             <div class="center">
             <header>
                 <button class="text-center" onclick="location.href='/home/tutorial'">Tutorial</button>
             </header>
         </div>
         </div>
-        <div class="container">
+        <div class="container-buttons">
             <div class="center">
 
             <header>
@@ -42,7 +43,7 @@
             </header>
         </div>
         </div>
-        <div class="container">
+        <div class="container-buttons">
             <div class="center">
             <header>
                 <button class="text-center">In-Game Shop</button>
@@ -50,7 +51,7 @@
         </div>
         </div>
 
-        <div class="container">
+        <div class="container-buttons">
             <div class="center">
                 <header>
                     <button class="text-center">Sign Out</button>
@@ -58,6 +59,7 @@
             </div>
         </div>
     </div>
+</div>
 </body>
 
 </html>
