--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,8 +1,8 @@
 <nav class="navbar" id="myNavbar">
-    <a href="#home">Home</a>
-    <a href="#account">Account</a>
+    <a href="/home">Home</a>
+    <a href="/profile">Profile</a>
     <a href="#leaderboard">Leaderboard</a>
-    <a href="#learning">Learning</a>
-    <a href="#forum">Forum</a>
+    <a href="/play">Learning</a>
+    <a href="/forum">Forum</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 </nav>
