added linked nav bars to forum and profile pages

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -141,7 +141,7 @@ mark {
                 <div class="row align-items-center flex-row-reverse">
                     <div class="col-lg-6">
                         <div class="about-text go-to">
-                            <h3 class="dark-color">JavAttack</h3>
+                            <h3 class="dark-color"><a href="/home">JavAttack</a></h3>
                             <h6 class="theme-color lead">User Profile</h6>
                             <div class="row about-list">
                                 <div class="col-md-6">
@@ -198,6 +198,7 @@ mark {
                 </div>
             </div>
         </section>
+        <%- include ('partials/nav.ejs') -%>
 <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="http://netdna.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 <script type="text/javascript">
