--- a/views/level_page.ejs
+++ b/views/level_page.ejs
@@ -78,16 +78,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">JavAttack</a>
+      <a class="navbar-brand" href="/home">JavAttack</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Account</a></li>
+        <li class="active"><a href="/home">Home</a></li>
+        <li><a href="/profile">Profile</a></li>
         <li><a href="#">Leaderboard</a></li>
-        <li><a href="#">Learning</a></li>
+        <li><a href="/play">Learning</a></li>
         <li><a href="#">Teacher View</a></li>
-        <li><a href="#">Forum</a></li>
+        <li><a href="/forum">Forum</a></li>
       </ul>
 
     </div>
