--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,6 +7,7 @@
     <title>JavAttack</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/mvp.css">
     <style type="text/css">
     	body{
     color: #292c30;
