linked sign out button to take back to index

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -55,7 +55,7 @@
         <div class="container-buttons">
             <div class="center">
                 <header>
-                    <button class="text-center">Sign Out</button>
+                    <button class="text-center" onclick="location.href='/'">Sign Out</button>
                 </header>
             </div>
         </div>
