Fixed labeling for email login

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
                     <!-- Username -->
                     <div class="form-floating mb-3">
                         <input type="text" class="form-control" id="floatingInput" name="login">
-                        <label for="floatingInput">Username</label>
+                        <label for="floatingInput">Email</label>
                     </div>
                     <!-- Password -->
                     <div class="form-floating">
