--- a/views/tutorial.ejs
+++ b/views/tutorial.ejs
@@ -1,75 +1,438 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>JavAttack</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <link href="/../assets/stylesheets/styles.css" rel="stylesheet" type="text/css">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <style>
-    /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
-   /* .row.content {height: 1500px} 
-    
-    /* Set gray background color and 100% height */
-    /*.sidenav {
-      background-color: #f1f1f1;
-      height: 100%;
-    }
-    
-    /* Set black background color, white text and some padding */
-    /*footer {
-      background-color: #555;
-      color: white;
-      padding: 15px;
-    }
-    
-    /* On small screens, set height to 'auto' for sidenav and grid */
-   /* @media screen and (max-width: 767px) {
-      .sidenav {
-        height: auto;
-        padding: 15px;
-      }
-      .row.content {height: auto;} 
-    } */
-  </style>
+    <meta charset="utf-8">
+    <!--  This file has been downloaded from bootdey.com    @bootdey on twitter -->
+    <!--  All snippets are MIT license http://bootdey.com/license -->
+    <title>JavAttack</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <style type="text/css">
+      body{
+    background:#f5f5f5;
+    margin-top:20px;}
+/*------- portfolio -------*/
+.project {
+  margin: 15px 0;
+}
+
+.no-gutter .project {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+.has-spacer {
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.has-spacer-extra-space {
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.has-side-spacer {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.project-title {
+  font-size: 1.25rem;
+}
+
+.project-skill {
+  font-size: 0.9rem;
+  font-weight: 400;
+  letter-spacing: 0.06rem;
+}
+
+.project-info-box {
+  margin: 15px 0;
+  background-color: #46a8e9;
+  padding: 30px 40px;
+  border-radius: 5px;
+}
+
+.project-info-box p {
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #f5f5f5;
+}
+
+.project-info-box p:last-child {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  border-bottom: none;
+}
+img {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    -webkit-backface-visibility: hidden;
+}
+.rounded {
+    border-radius: 5px !important;
+}
+.btn-xs.btn-icon {
+    width: 34px;
+    height: 34px;
+    max-width: 34px !important;
+    max-height: 34px !important;
+    font-size: 10px;
+    line-height: 34px;
+}
+/* dribble button */
+.btn-dribbble, .btn-dribbble:active, .btn-dribbble:focus {
+  color: #fff !important;
+  background: #ec5f94;
+  border: 2px solid #ec5f94;
+}
+
+.btn-dribbble:hover {
+  color: #fff !important;
+  background: #b4446e;
+  border: 2px solid #b4446e;
+}
+
+.btn-dribbble-link, .btn-dribbble-link:active, .btn-dribbble-link:focus {
+  color: #ec5f94 !important;
+  background: transparent;
+  border: none;
+}
+
+.btn-dribbble-link:hover {
+  color: #b4446e !important;
+}
+
+.btn-outline-dribbble, .btn-outline-dribbble:active, .btn-outline-dribbble:focus {
+  color: #ec5f94 !important;
+  background: transparent;
+  border: 2px solid #ec5f94;
+}
+
+.btn-outline-dribbble:hover {
+  color: #fff !important;
+  background: #ec5f94;
+  border: 2px solid #ec5f94;
+}
+
+
+/* youtube button */
+.btn-youtube, .btn-youtube:active, .btn-youtube:focus {
+  color: #fff !important;
+  background: #e52d27;
+  border: 2px solid #e52d27;
+}
+
+.btn-youtube:hover {
+  color: #fff !important;
+  background: #b31217;
+  border: 2px solid #b31217;
+}
+
+.btn-youtube-link, .btn-youtube-link:active, .btn-youtube-link:focus {
+  color: #e52d27 !important;
+  background: transparent;
+  border: none;
+}
+
+.btn-youtube-link:hover {
+  color: #b31217 !important;
+}
+
+.btn-outline-youtube, .btn-outline-youtube:active, .btn-outline-youtube:focus {
+  color: #e52d27 !important;
+  background: transparent;
+  border: 2px solid #e52d27;
+}
+
+.btn-outline-youtube:hover {
+  color: #fff !important;
+  background: #e52d27;
+  border: 2px solid #e52d27;
+}
+.btn-xs.btn-icon span, .btn-xs.btn-icon i {
+    line-height: 34px;
+}
+.btn-icon.btn-circle span, .btn-icon.btn-circle i {
+    margin-top: -1px;
+    margin-right: -1px;
+}
+.btn-icon i {
+    margin-top: -1px;
+}
+.btn-icon span, .btn-icon i {
+    display: block;
+    line-height: 50px;
+}
+a.btn, a.btn-social {
+    display: inline-block;
+}
+.mr-5 {
+    margin-right: 5px !important;
+}
+.mb-0 {
+    margin-bottom: 0 !important;
+}
+.btn-facebook, .btn-facebook:active, .btn-facebook:focus {
+    color: #fff !important;
+    background: #f5f5f5;
+    border: 2px solid #f5f5f5;
+}
+.btn-circle {
+    border-radius: 50% !important;
+}
+.project-info-box p {
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #d5dadb;
+}
+p {
+    font-family: "Barlow", sans-serif !important;
+    font-weight: 300;
+    font-size: 1rem;
+    color: #<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <!--  This file has been downloaded from bootdey.com    @bootdey on twitter -->
+    <!--  All snippets are MIT license http://bootdey.com/license -->
+    <title>JavAttack</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <style type="text/css">
+      body{
+    background:#f5f5f5;
+    margin-top:20px;}
+/*------- portfolio -------*/
+.project {
+  margin: 15px 0;
+}
+
+.no-gutter .project {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+.has-spacer {
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.has-spacer-extra-space {
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.has-side-spacer {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.project-title {
+  font-size: 1.25rem;
+}
+
+.project-skill {
+  font-size: 0.9rem;
+  font-weight: 400;
+  letter-spacing: 0.06rem;
+}
+
+.project-info-box {
+  margin: 15px 0;
+  background-color: #d5dadb;
+  padding: 30px 40px;
+  border-radius: 5px;
+}
+
+.project-info-box p {
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #d5dadb;
+}
+
+.project-info-box p:last-child {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  border-bottom: none;
+}
+img {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    -webkit-backface-visibility: hidden;
+}
+.rounded {
+    border-radius: 5px !important;
+}
+.btn-xs.btn-icon {
+    width: 34px;
+    height: 34px;
+    max-width: 34px !important;
+    max-height: 34px !important;
+    font-size: 10px;
+    line-height: 34px;
+}
+/* dribble button */
+.btn-dribbble, .btn-dribbble:active, .btn-dribbble:focus {
+  color: #fff !important;
+  background: #ec5f94;
+  border: 2px solid #ec5f94;
+}
+
+.btn-dribbble:hover {
+  color: #fff !important;
+  background: #b4446e;
+  border: 2px solid #b4446e;
+}
+
+.btn-dribbble-link, .btn-dribbble-link:active, .btn-dribbble-link:focus {
+  color: #ec5f94 !important;
+  background: transparent;
+  border: none;
+}
+
+.btn-dribbble-link:hover {
+  color: #b4446e !important;
+}
+
+.btn-outline-dribbble, .btn-outline-dribbble:active, .btn-outline-dribbble:focus {
+  color: #ec5f94 !important;
+  background: transparent;
+  border: 2px solid #ec5f94;
+}
+
+.btn-outline-dribbble:hover {
+  color: #fff !important;
+  background: #ec5f94;
+  border: 2px solid #ec5f94;
+}
+
+
+/* youtube button */
+.btn-youtube, .btn-youtube:active, .btn-youtube:focus {
+  color: #fff !important;
+  background: #e52d27;
+  border: 2px solid #e52d27;
+}
+
+.btn-youtube:hover {
+  color: #fff !important;
+  background: #b31217;
+  border: 2px solid #b31217;
+}
+
+.btn-youtube-link, .btn-youtube-link:active, .btn-youtube-link:focus {
+  color: #e52d27 !important;
+  background: transparent;
+  border: none;
+}
+
+.btn-youtube-link:hover {
+  color: #b31217 !important;
+}
+
+.btn-outline-youtube, .btn-outline-youtube:active, .btn-outline-youtube:focus {
+  color: #e52d27 !important;
+  background: transparent;
+  border: 2px solid #e52d27;
+}
+
+.btn-outline-youtube:hover {
+  color: #fff !important;
+  background: #e52d27;
+  border: 2px solid #e52d27;
+}
+.btn-xs.btn-icon span, .btn-xs.btn-icon i {
+    line-height: 34px;
+}
+.btn-icon.btn-circle span, .btn-icon.btn-circle i {
+    margin-top: -1px;
+    margin-right: -1px;
+}
+.btn-icon i {
+    margin-top: -1px;
+}
+.btn-icon span, .btn-icon i {
+    display: block;
+    line-height: 50px;
+}
+a.btn, a.btn-social {
+    display: inline-block;
+}
+.mr-5 {
+    margin-right: 5px !important;
+}
+.mb-0 {
+    margin-bottom: 0 !important;
+}
+.btn-facebook, .btn-facebook:active, .btn-facebook:focus {
+    color: #fff !important;
+    background: #d5dadb;
+    border: 2px solid #d5dadb;
+}
+.btn-circle {
+    border-radius: 50% !important;
+}
+.project-info-box p {
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #f5f5f5;
+}
+p {
+    font-family: "Barlow", sans-serif !important;
+    font-weight: 300;
+    font-size: 1rem;
+    color: #d5dadb;
+    letter-spacing: 0.03rem;
+    margin-bottom: 10px;
+}
+b, strong {
+    font-weight: 700 !important;
+}
+    </style>
 </head>
 <body>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
+<div class="container">
+    <div class="row">
+        <div class="col-md-5">
+          <div class="section-title text-center title-ex1">
+          <h3 class="dark-color"><a href="/home">JavAttack</a></h3> </div>
+          <%- include ('partials/nav.ejs') -%>
+            <div class="project-info-box mt-0">
+                <h5>HOW TO PLAY</h5>
+                <p class="mb-0">Answer the coding questions from the respective levels. Earn points for correct answers, no penalty for wrong answers. Move to the next level as you improve your programming skills!</p>
+            </div><!-- / project-info-box -->
+
+            <div class="project-info-box">
+                <p><b>POINTS:</b> Earn points as you progress and get answers correct!</p>
+                <p><b>RANK:</b> See how you compete with other players! </p>
+                <p><b>ITEMS/PERKS:</b> Spend your points in the in-game shop!</p>
+                <p><b>CUSTOMIZATION:</b> Personalize your avatar! </p>
+                <p class="mb-0"><b>Budget:</b> $500</p>
+            </div><!-- / project-info-box -->
 
 
-   <div class="col-sm-9">
-      <h4><small>Tutorial</small></h4>
-      <hr>
-      <h2>Game Demo: Let's learn how to play!</h2>
-      <video width="700" height="500" controls>
-  <source src="movie.mp4" type="video/mp4">
-  <source src="movie.ogg" type="video/ogg">
-Your browser does not support the video tag.
-</video>
-​
-      <br><br>
+        </div><!-- / column -->
 
-
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="#">JavAttack</a>
+        <div class="col-md-7">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/eIrMbAQSU34" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="project-info-box">
+                <p><b>Ready? Start playing!</b></p>
+            </div><!-- / project-info-box -->
+        </div><!-- / column -->
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Account</a></li>
-        <li><a href="#">Leaderboard</a></li>
-        <li><a href="#">Learning</a></li>
-        <li><a href="#">Teacher View</a></li>
-        <li><a href="#">Forum</a></li>
-      </ul>
-
+</div>
+<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="http://netdna.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<script type="text/javascript">
+  
+</script>
 </body>
 </html>
