--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -212,7 +212,7 @@
 							</td>
 							<td>
 								<img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
-								<a href="#" class="user-link">Mila Kunis</a>
+								<a href="#" class="user-link">Student #1</a>
 								<span class="user-subhead">Student</span>
 							</td>
 							<td>
@@ -222,7 +222,7 @@
 								<span class="label label-success">Active</span>
 							</td>
 							<td>
-								<a href="#">mila@kunis.com</a>
+								<a href="#">email@uncc.edu</a>
 							</td>
 							<td style="width: 20%;">
 								<a href="#" class="table-link">
@@ -250,7 +250,7 @@
 							</td>
 							<td>
 								<img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="">
-								<a href="#" class="user-link">George Clooney</a>
+								<a href="#" class="user-link">Student #2</a>
 								<span class="user-subhead">Student</span>
 							</td>
 							<td>
@@ -260,7 +260,7 @@
 								<span class="label label-success">Active</span>
 							</td>
 							<td>
-								<a href="#">marlon@brando.com</a>
+								<a href="#">email@uncc.edu</a>
 							</td>
 							<td style="width: 20%;">
 								<a href="#" class="table-link">
@@ -288,7 +288,7 @@
 							</td>
 							<td>
 								<img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="">
-								<a href="#" class="user-link">Ryan Gossling</a>
+								<a href="#" class="user-link">Student #3</a>
 								<span class="user-subhead">Student</span>
 							</td>
 							<td>
@@ -298,7 +298,7 @@
 								<span class="label label-success">Active</span>
 							</td>
 							<td>
-								<a href="#">jack@nicholson</a>
+								<a href="#">email@uncc.edu</a>
 							</td>
 							<td style="width: 20%;">
 								<a href="#" class="table-link">
@@ -326,7 +326,7 @@
 							</td>
 							<td>
 								<img src="https://bootdey.com/img/Content/avatar/avatar4.png" alt="">
-								<a href="#" class="user-link">Emma Watson</a>
+								<a href="#" class="user-link">Student #4</a>
 								<span class="user-subhead">Student</span>
 							</td>
 							<td>
@@ -336,7 +336,7 @@
 								<span class="label label-success">Active</span>
 							</td>
 							<td>
-								<a href="#">humphrey@bogart.com</a>
+								<a href="#">email@uncc.edu</a>
 							</td>
 							<td style="width: 20%;">
 								<a href="#" class="table-link">
@@ -364,7 +364,7 @@
 							</td>
 							<td>
 								<img src="https://bootdey.com/img/Content/avatar/avatar5.png" alt="">
-								<a href="#" class="user-link">Robert Downey Jr.</a>
+								<a href="#" class="user-link">Instructor #1.</a>
 								<span class="user-subhead">Instructor</span>
 							</td>
 							<td>
@@ -374,7 +374,7 @@
 								<span class="label label-success">Active</span>
 							</td>
 							<td>
-								<a href="#">spencer@tracy</a>
+								<a href="#">email@uncc.edu</a>
 							</td>
 							<td style="width: 20%;">
 								<a href="#" class="table-link">
@@ -402,7 +402,7 @@
 							</td>
 							<td>
 								<img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="">
-								<a href="#" class="user-link">Mila Kunis</a>
+								<a href="#" class="user-link">Instructor #2</a>
 								<span class="user-subhead">Instructor</span>
 							</td>
 							<td>
@@ -412,7 +412,7 @@
 								<span class="label label-default">Inactive</span>
 							</td>
 							<td>
-								<a href="#">mila@kunis.com</a>
+								<a href="#">email@uncc.edu</a>
 							</td>
 							<td style="width: 20%;">
 								<a href="#" class="table-link">
@@ -440,7 +440,7 @@
 							</td>
 							<td>
 								<img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="">
-								<a href="#" class="user-link">George Clooney</a>
+								<a href="#" class="user-link">Student #5</a>
 								<span class="user-subhead">Student</span>
 							</td>
 							<td>
@@ -450,7 +450,7 @@
 								<span class="label label-success">Active</span>
 							</td>
 							<td>
-								<a href="#">marlon@brando.com</a>
+								<a href="#">email@uncc.edu</a>
 							</td>
 							<td style="width: 20%;">
 								<a href="#" class="table-link">
@@ -478,7 +478,7 @@
 							</td>
 							<td>
 								<img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
-								<a href="#" class="user-link">Ryan Gossling</a>
+								<a href="#" class="user-link">Student #6</a>
 								<span class="user-subhead">Student</span>
 							</td>
 							<td>
@@ -488,7 +488,7 @@
 								<span class="label label-default">Inactive</span>
 							</td>
 							<td>
-								<a href="#">jack@nicholson</a>
+								<a href="#">email@uncc.edu</a>
 							</td>
 							<td style="width: 20%;">
 								<a href="#" class="table-link">
@@ -516,7 +516,7 @@
 							</td>
 							<td>
 								<img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
-								<a href="#" class="user-link">Emma Watson</a>
+								<a href="#" class="user-link">Student #7</a>
 								<span class="user-subhead">Student</span>
 							</td>
 							<td>
@@ -526,7 +526,7 @@
 								<span class="label label-default">Inactive</span>
 							</td>
 							<td>
-								<a href="#">humphrey@bogart.com</a>
+								<a href="#">email@uncc.edu</a>
 							</td>
 							<td style="width: 20%;">
 								<a href="#" class="table-link">
@@ -554,7 +554,7 @@
 							</td>
 							<td>
 								<img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="">
-								<a href="#" class="user-link">Robert Downey Jr.</a>
+								<a href="#" class="user-link">Instructor #3</a>
 								<span class="user-subhead">Instructor</span>
 							</td>
 							<td>
@@ -564,7 +564,7 @@
 								<span class="label label-success">Active</span>
 							</td>
 							<td>
-								<a href="#">spencer@tracy</a>
+								<a href="#">email@uncc.edu</a>
 							</td>
 							<td style="width: 20%;">
 								<a href="#" class="table-link">
