updating leaderboard - adding points column

--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -199,7 +199,7 @@
 						<tr>
 							<th><span>RANK</span></th>
 							<th class="text-center"><span>User</span></th>
-							<th><span>Last Active</span></th>
+							<th><span>Points</span></th>
 							<th class="text-center"><span>Status</span></th>
 							<th><span> Email </span></th>
 							<th><span> Actions </span></th>
@@ -216,7 +216,7 @@
 								<span class="user-subhead">Student</span>
 							</td>
 							<td>
-								2013/08/08
+								1930
 							</td>
 							<td class="text-center">
 								<span class="label label-success">Active</span>
@@ -254,7 +254,7 @@
 								<span class="user-subhead">Student</span>
 							</td>
 							<td>
-								2013/08/12
+								1850
 							</td>
 							<td class="text-center">
 								<span class="label label-success">Active</span>
@@ -292,7 +292,7 @@
 								<span class="user-subhead">Student</span>
 							</td>
 							<td>
-								2013/03/03
+								1670
 							</td>
 							<td class="text-center">
 								<span class="label label-success">Active</span>
@@ -330,7 +330,7 @@
 								<span class="user-subhead">Student</span>
 							</td>
 							<td>
-								2004/01/24
+								1400
 							</td>
 							<td class="text-center">
 								<span class="label label-success">Active</span>
@@ -368,7 +368,7 @@
 								<span class="user-subhead">Instructor</span>
 							</td>
 							<td>
-								2013/12/31
+								1120
 							</td>
 							<td class="text-center">
 								<span class="label label-success">Active</span>
@@ -406,7 +406,7 @@
 								<span class="user-subhead">Instructor</span>
 							</td>
 							<td>
-								2013/08/08
+								850
 							</td>
 							<td class="text-center">
 								<span class="label label-default">Inactive</span>
@@ -444,7 +444,7 @@
 								<span class="user-subhead">Student</span>
 							</td>
 							<td>
-								2013/08/12
+								600
 							</td>
 							<td class="text-center">
 								<span class="label label-success">Active</span>
@@ -482,7 +482,7 @@
 								<span class="user-subhead">Student</span>
 							</td>
 							<td>
-								2013/03/03
+								550
 							</td>
 							<td class="text-center">
 								<span class="label label-default">Inactive</span>
@@ -520,7 +520,7 @@
 								<span class="user-subhead">Student</span>
 							</td>
 							<td>
-								2004/01/24
+								300
 							</td>
 							<td class="text-center">
 								<span class="label label-default">Inactive</span>
@@ -558,7 +558,7 @@
 								<span class="user-subhead">Instructor</span>
 							</td>
 							<td>
-								2013/12/31
+								150
 							</td>
 							<td class="text-center">
 								<span class="label label-success">Active</span>
@@ -590,6 +590,18 @@
 					</tbody>
 				</table>
 			</div>
+			
+		</div>
+	</div>
+</div>
+</div>
+<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script type="text/javascript">
+	
+</script>
+</body>
+</html>
 			
 		</div>
 	</div>
