Routed shop page and added nav bar to shop page.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -47,7 +47,7 @@
         <div class="container-buttons">
             <div class="center">
             <header>
-                <button class="text-center">In-Game Shop</button>
+                <button class="text-center" onclick="location.href='/shop'">In-Game Shop</button>
             </header>
         </div>
         </div>
