--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -21,15 +21,11 @@
     <div class="container">
         <main>
             <div id="subTitle">
-                <p class="text-center">Register your username, email address, and password</p>
+                <p class="text-center">Register your account!</p>
             </div>
             <div class="w-75 p-3 position-relative top-0 start-50 translate-middle-x" id="registerDiv">
                 <form action="/login">
                     <fieldset>
-                        <div class="form-floating">
-                            <input type="text" class="form-control" id="floatingInput" placeholder="Username" required>
-                            <label for="floatingInput">Username</label>
-                        </div>
                         <div class="form-floating">
                             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
                             <label for="floatingInput">Email address</label>
@@ -37,6 +33,10 @@
                         <div class="form-floating">
                             <input type="password" class="form-control" id="floatingPassword" placeholder="Password" required>
                             <label for="floatingPassword">Password</label>
+                        </div>
+                        <div class="form-floating">
+                            <input type="text" class="form-control" id="floatingInput" placeholder="Confirm Password" required>
+                            <label for="floatingInput">Confirm Password</label>
                         </div>
                         <button type="submit" class="btn btn-primary btn-sm position-relative top-0 start-50 translate-middle-x">Register</button>
                     </fieldset>
