--- a/views/level_page.ejs
+++ b/views/level_page.ejs
@@ -228,7 +228,7 @@
                     <h5 class="day">LEVEL 1</h5>
                   </div>
                   <div class="media-body">
-                    <a href=""><h5 class="mt-0">PLAY</h5></a>
+                    <a href="/play/lvl1"><h5 class="mt-0">PLAY</h5></a>
                     Dive into syntax, methods, and parameters.
                     <a href="blog-post-left-sidebar.html" class="post-link">Read More</a>
                   </div>
@@ -241,7 +241,7 @@
                     <h5 class="day">LEVEL 2</h5>
                   </div>
                   <div class="media-body">
-                    <a href=""><h5 class="mt-0">PLAY</h5></a>
+                    <a href="/play/lvl2"><h5 class="mt-0">PLAY</h5></a>
                     Let's learn about strings, loops, and variables.
                     <a href="blog-post-left-sidebar.html" class="post-link">Read More</a>
                   </div>
@@ -254,7 +254,7 @@
                     <h5 class="day">LEVEL 3</h5>
                   </div>
                   <div class="media-body">
-                    <a href=""><h5 class="mt-0">PLAY</h5></a>
+                    <a href="/play/lvl3"><h5 class="mt-0">PLAY</h5></a>
                     How do we take in input from a user?
                     <a href="blog-post-left-sidebar.html" class="post-link">Read More</a>
                   </div>
@@ -267,7 +267,7 @@
                   <div class="circle">
                     <h5 class="day">LEVEL 4</h5>                  </div>
                   <div class="media-body">
-                    <a href=""><h5 class="mt-0">PLAY</h5></a>
+                    <a href="/play/lvl4"><h5 class="mt-0">PLAY</h5></a>
                     So you think you know about functions and objects?
                     <a href="blog-post-left-sidebar.html" class="post-link">Read More</a>
 
