finished level 3 and 4

--- a/views/lvl3.ejs
+++ b/views/lvl3.ejs
@@ -19,55 +19,55 @@
     </div>
     <h1>Questions for level 1!</h1>
 
-    <h2>1. </h2>
+    <h2>1. Fill in the blank to declare the scanner: Scanner scan = ___ Scanner(System.in)</h2>
     <button class="collapse">Show answer!</button>
     <div class="collapseContent">
-        <p></p>
+        <p>new</p>
     </div>
-    <h2>2. </h2>
+    <h2>2. What is the name of the scanner? Scanner read = new Scanner(System.in)</h2>
     <button class="collapse">Show answer!</button>
     <div class="collapseContent">
-        <p></p>
+        <p>read</p>
     </div>
-    <h2>3. </h2>
+    <h2>3. Fill in the blank while having the scanner named scan: String name = ____.nextLine();</h2>
     <button class="collapse">Show answer!</button>
     <div class="collapseContent">
-        <p></p>
+        <p>scan</p>
     </div>
-    <h2>4. </h2>
+    <h2>4. Fill in the blank for taking in an int as an input: scan._______();</h2>
     <button class="collapse">Show answer!</button>
     <div class="collapseContent">
-        <p></p>
+        <p>nextInt</p>
     </div>
-    <h2>5. </h2>
+    <h2>5. Fill in the blank for taking in a float as an input: scan._________();</h2>
     <button class="collapse">Show answer!</button>
     <div class="collapseContent">
-        <p></p>
+        <p>nextFloat</p>
     </div>
-    <h2>6. </h2>
+    <h2>6. Fill in the blank for the import of the scanner class: import java.util._______;</h2>
     <button class="collapse">Show answer!</button>
     <div class="collapseContent">
-        <p></p>
+        <p>Scanner</p>
     </div>
-    <h2>7. </h2>
+    <h2>7. Fill in the blank in order to create a variable string to be taken as an input: ______ sentence = scan.nextLine();</h2>
     <button class="collapse">Show answer!</button>
     <div class="collapseContent">
-        <p></p>
+        <p>String</p>
     </div>
-    <h2>8. </h2>
+    <h2>8. Fill in the blank for taking in a string for a scanner named scan: _____________();</h2>
     <button class="collapse">Show answer!</button>
     <div class="collapseContent">
-        <p></p>
+        <p>scan.nextLine</p>
     </div>
-    <h2>9. </h2>
+    <h2>9. Fill in the blank for taking in a float for a scanner named scan: ______________();</h2>
     <button class="collapse">Show answer!</button>
     <div class="collapseContent">
-        <p></p>
+        <p>scan.nextFloat</p>
     </div>
-    <h2>10. </h2>
+    <h2>10. Fill in the blank to import the scanner class: ______ java.util.Scanner</h2>
     <button class="collapse">Show answer!</button>
     <div class="collapseContent">
-        <p></p>
+        <p>import</p>
     </div>
 
     <script>
